--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,113 @@ __pycache__/
 *.onnx
 *.npy
 *.csv
+projects/Caleb/config.yaml
+projects/Caleb2/config.yaml
+projects/Caleb3/config.yaml
+projects/Caleb4/config.yaml
+projects/Caleb4/logs/CenterDetect/Run_20240220-141814/events.out.tfevents.1708460294.DESKTOP-JM0E7JN.27188.0
+projects/Caleb4/logs/CenterDetect/Run_20240220-142143/events.out.tfevents.1708460503.DESKTOP-JM0E7JN.25876.0
+projects/Caleb4/logs/CenterDetect/Run_20240220-143837/events.out.tfevents.1708461517.DESKTOP-JM0E7JN.27844.0
+projects/Caleb4/logs/CenterDetect/Run_20240220-155041/events.out.tfevents.1708465841.DESKTOP-JM0E7JN.4312.0
+projects/Caleb4/logs/CenterDetect/Run_20240220-155259/events.out.tfevents.1708465979.DESKTOP-JM0E7JN.25764.0
+projects/Caleb4/logs/CenterDetect/Run_20240220-160843/events.out.tfevents.1708466923.DESKTOP-JM0E7JN.21852.0
+projects/Caleb4/logs/CenterDetect/Run_20240220-165030/events.out.tfevents.1708469430.DESKTOP-JM0E7JN.24804.0
+projects/Caleb4/logs/CenterDetect/Run_20240221-104528/events.out.tfevents.1708533928.DESKTOP-JM0E7JN.4960.0
+projects/Caleb4/logs/CenterDetect/Run_20240221-155151/events.out.tfevents.1708552311.DESKTOP-JM0E7JN.1788.0
+projects/Caleb4/logs/CenterDetect/Run_20240222-113526/events.out.tfevents.1708623326.DESKTOP-JM0E7JN.19364.0
+projects/Caleb4/logs/CenterDetect/Run_20240222-120646/events.out.tfevents.1708625206.DESKTOP-JM0E7JN.20092.0
+projects/Caleb4/logs/CenterDetect/Run_20240222-121652/events.out.tfevents.1708625812.DESKTOP-JM0E7JN.17860.0
+projects/Caleb4/logs/CenterDetect/Run_20240222-121934/events.out.tfevents.1708625974.DESKTOP-JM0E7JN.16736.0
+projects/Caleb4/logs/CenterDetect/Run_20240223-121518/events.out.tfevents.1708712118.DESKTOP-JM0E7JN.4780.0
+projects/Caleb4/logs/CenterDetect/Run_20240223-151451/events.out.tfevents.1708722891.DESKTOP-JM0E7JN.10136.0
+projects/Caleb4/logs/CenterDetect/Run_20240223-160813/events.out.tfevents.1708726093.DESKTOP-JM0E7JN.9516.0
+projects/Caleb4/logs/CenterDetect/Run_20240223-161732/events.out.tfevents.1708726652.DESKTOP-JM0E7JN.9276.0
+projects/Caleb4/logs/CenterDetect/Run_20240223-162851/events.out.tfevents.1708727331.DESKTOP-JM0E7JN.22288.0
+projects/Caleb4/logs/CenterDetect/Run_20240223-163142/events.out.tfevents.1708727502.DESKTOP-JM0E7JN.6796.0
+projects/Caleb4/logs/CenterDetect/Run_20240223-163829/events.out.tfevents.1708727909.DESKTOP-JM0E7JN.12080.0
+projects/Caleb4/logs/CenterDetect/Run_20240223-165232/events.out.tfevents.1708728752.DESKTOP-JM0E7JN.18160.0
+projects/Caleb4/logs/HybridNet/Run_20240222-113529/events.out.tfevents.1708623329.DESKTOP-JM0E7JN.3656.0
+projects/Caleb4/logs/HybridNet/Run_20240222-120648/events.out.tfevents.1708625208.DESKTOP-JM0E7JN.8208.0
+projects/Caleb4/logs/HybridNet/Run_20240222-121655/events.out.tfevents.1708625815.DESKTOP-JM0E7JN.20072.0
+projects/Caleb4/logs/HybridNet/Run_20240222-121937/events.out.tfevents.1708625977.DESKTOP-JM0E7JN.6436.0
+projects/Caleb4/logs/HybridNet/Run_20240223-102034/events.out.tfevents.1708705234.DESKTOP-JM0E7JN.20584.0
+projects/Caleb4/logs/HybridNet/Run_20240223-162855/events.out.tfevents.1708727335.DESKTOP-JM0E7JN.20164.0
+projects/Caleb4/logs/HybridNet/Run_20240223-163145/events.out.tfevents.1708727505.DESKTOP-JM0E7JN.18148.0
+projects/Caleb4/logs/HybridNet/Run_20240223-163832/events.out.tfevents.1708727912.DESKTOP-JM0E7JN.17264.0
+projects/Caleb4/logs/HybridNet/Run_20240223-165235/events.out.tfevents.1708728755.DESKTOP-JM0E7JN.2296.0
+projects/Caleb4/logs/KeypointDetect/Run_20240223-121355/events.out.tfevents.1708712035.DESKTOP-JM0E7JN.21324.0
+projects/Caleb4/logs/KeypointDetect/Run_20240223-121517/events.out.tfevents.1708712117.DESKTOP-JM0E7JN.7892.0
+projects/Caleb4/logs/KeypointDetect/Run_20240223-151451/events.out.tfevents.1708722891.DESKTOP-JM0E7JN.4980.0
+projects/Caleb4/logs/KeypointDetect/Run_20240223-160812/events.out.tfevents.1708726092.DESKTOP-JM0E7JN.22104.0
+projects/Caleb4/logs/KeypointDetect/Run_20240223-161732/events.out.tfevents.1708726652.DESKTOP-JM0E7JN.20616.0
+projects/Caleb4/logs/KeypointDetect/Run_20240223-162850/events.out.tfevents.1708727330.DESKTOP-JM0E7JN.2080.0
+projects/Caleb4/logs/KeypointDetect/Run_20240223-163141/events.out.tfevents.1708727501.DESKTOP-JM0E7JN.11412.0
+projects/Caleb4/logs/KeypointDetect/Run_20240223-163829/events.out.tfevents.1708727909.DESKTOP-JM0E7JN.11880.0
+projects/Caleb4/models/CenterDetect/Run_20240221-104528/EfficientTrack-medium_Epoch_10.pth
+projects/Caleb4/models/CenterDetect/Run_20240222-120646/EfficientTrack-medium_final.pth
+projects/Caleb4/models/CenterDetect/Run_20240223-121518/EfficientTrack-medium_final.pth
+projects/Caleb4/models/CenterDetect/Run_20240223-151451/EfficientTrack-medium_final.pth
+projects/Caleb4/models/CenterDetect/Run_20240223-165232/EfficientTrack-medium_final.pth
+projects/Caleb4/models/HybridNet/Run_20240222-120648/HybridNet-medium_final.pth
+projects/Caleb4/models/HybridNet/Run_20240223-165235/HybridNet-medium_final.pth
+projects/Caleb4/models/KeypointDetect/Run_20240223-121517/EfficientTrack-medium_final.pth
+projects/Caleb4/models/KeypointDetect/Run_20240223-151451/EfficientTrack-medium_final.pth
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240304-104449/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240304-104639/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240304-105156/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240304-105745/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240304-105817/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240304-105927/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240304-110819/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240304-114123/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240304-114952/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240304-155247/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-101306/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-102230/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103335/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103336/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103338/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103340/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103342/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103343/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103344/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103345/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103346/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103347/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103348/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103349/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103350/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103351/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103352/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103353/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103355/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103357/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103358/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103359/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103400/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103401/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103402/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103404/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103406/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103408/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103410/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103412/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-103413/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-105326/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-110746/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-111147/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-140348/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-140742/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-140940/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-141144/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-142417/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-144744/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-145923/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-150228/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-154056/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-160121/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-161117/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240311-161937/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240312-102726/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240312-102855/info.yaml
+projects/Caleb4/predictions/predictions3D/Predictions_3D_20240312-104424/info.yaml
